# Textractor

./: .appveyor.yml  .gitignore  CMakeLists.txt  CMakeSettings.json  CREDITS.md  GUI.sln  README.md  README_DE.md  README_ES.md  README_FR.md  README_GER.md  README_ID.md  README_IT.md  README_JP.md  README_KR.md  README_PO.md  README_PT.md  README_RU.md  README_SC.md  README_TH.md  deploy.ps1  installer.iss  text.cpp
GUI/: CMakeLists.txt  Form1.Designer.cs  Form1.cs  GUI.csproj  GUI.pro  NextHooker.rc  Program.cs  Textractor.rc  attachprocessdialog.cpp  attachprocessdialog.h  attachprocessdialog.ui  attachtoprocessdialog.cpp  attachtoprocessdialog.h  attachtoprocessdialog.ui  exception.cpp  extendialog.cpp  extendialog.h  extendialog.ui  extensions.cpp  extensions.h  extenwindow.cpp  extenwindow.h  extenwindow.ui  hostsignaller.cpp  hostsignaller.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  misc.cpp  misc.h  qtcommon.h  setdialog.cpp  setdialog.h  setdialog.ui  tests.cpp
GUI/HostInterop/: HostInterop.cpp  HostInterop.h  HostInterop.vcxproj  HostInterop.vcxproj.filters  stdafx.h
GUI/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
GUI/host/: CMakeLists.txt  cli.cpp  exception.cpp  hookcode.cpp  hookcode.h  host.cc  host.cpp  host.h  textthread.cc  textthread.cpp  textthread.h  util.cpp  util.h
GUI/utils/: windowshelpers.cpp  windowshelpers.h
extensions/: CMakeLists.txt  baidutranslate.cpp  bingtranslate.cpp  blockmarkup.h  blockmarkuplanguage.h  caiyuntranslate.cpp  charstorage.h  cnbingtranslate.cpp  copyclipboard.cpp  deepltranslate.cpp  devtools.cpp  devtools.h  devtoolsdeepltranslate.cpp  devtoolsgoogletranslate.cpp  devtoolspapagotranslate.cpp  devtoolssystrantranslate.cpp  devtoolswrapper.cpp  extension.h  extensionimpl.cpp  extensions.h  extensiontester.cpp  extranewlines.cpp  extrawindow.cpp  extrawindow.ui  googlecloudtranslate.cpp  googletranslate.cpp  libretranslate.cpp  lua.cpp  md5.cpp  md5.h  network.cpp  network.h  regexfilter.cpp  regexfilter.ui  regexreplacer.cpp  regexreplacerprocesshooked.cpp  regexreplacertranslatedtext.cpp  removerepeat.cpp  removerepeatchar.cpp  removerepeatedleadingsentence.cpp  (+15 more)
extensions/bingtranslate/: bingtranslate.cpp
extensions/copyclipboard/: copyclipboard.cpp
extensions/extranewlines/: extranewlines.cpp
extensions/googletranslate/: googletranslate.cpp
extensions/regexfilter/: regexfilter.cpp  window.cpp  window.h  window.ui
extensions/removerepeat/: removerepeat.cpp
extensions/threadlinker/: threadlinker.cpp  window.cpp  window.h  window.ui
host/: CMakeLists.txt  exception.cpp  host.cc  host.h  pipe.cc  pipe.h  textthread.cc  textthread.cpp  textthread.h  winmutex.h
host/CLI/: CMakeLists.txt  main.cpp
host/cli/: main.cpp
texthook/: CMakeLists.txt  hookfinder.cc  hookfinder.h  hookman.cc  hookman.h  host.cc  host.h  main.cc  main.h  pipe.cc  pipe.h  texthook.cc  texthook.h  textthread.cc  textthread.h
texthook/engine/: engine.cc  engine.h  match.cc  match32.cc  match32_extra.cc  match64.cc  match64_extra.cc  match_extra.cc
texthook/engine/mono/: monoobject.h
texthook/engine/native/: pchooks.cc
texthook/util/: util.cc  util.h
texthook/util/ithsys/: ithsys.cc
vnr/: CMakeLists.txt  config.pri  copy_vnr.cmd  exclude.txt
vnr/ccutil/: ccmacro.h  ccutil.pri
vnr/cpputil/: cppcstring.h  cpplocale.h  cppmarshal.h  cppmath.h  cpppath.h  cppstring.h  cpptype.h  cppunicode.h  cpputil.pri
vnr/disasm/: disasm.cc  disasm.h  disasm.pri  disasm.pro
vnr/extensions/: Extensions.cpp  Extensions.h
vnr/hashutil/: hashstr.h  hashutil.h  hashutil.pri
vnr/ith/: dllconfig.h  dllconfig.pri  ith.pro
vnr/ith/common/: common.pri  const.h  defs.h  except.h  growl.h  string.h  types.h
vnr/ith/hook/: CMakeLists.txt  cli.h  config.h  hook.h  hook.pro  main.cc
vnr/ith/hookxp/: hookxp.pro
vnr/ith/host/: CMakeLists.txt  SettingManager.h  avl_p.h  config.h  hookman.cc  hookman.h  host.pri  host.pro  main.cc  pipe.cc  settings.h  srv.h  srv_p.h  textthread.cc  textthread.h  textthread_p.h
vnr/ith/sys/: CMakeLists.txt  sys.cc  sys.h  sys.pri  sys.pro
vnr/ithsys/: CMakeLists.txt  ithsys.cc  ithsys.h  ithsys.pri  ithsys.pro
vnr/memdbg/: memdbg.pri  memsearch.cc  memsearch.h
vnr/mono/: mono.pri
vnr/ntdll/: ntdll.h  ntdll.pri
vnr/ntinspect/: ntinspect.cc  ntinspect.h  ntinspect.pri
vnr/profile/: CMakeLists.txt  Profile.cpp  misc.cpp  misc.h  pugiconfig.hpp  pugixml.cpp  pugixml.h
vnr/sakurakit/: sakurakit.pri  skautorun.h  skdebug.h  skglobal.h  skhash.h
vnr/texthook/: CMakeLists.txt  config.h  hookman.cc  hookman.h  host.cc  host.h  ihf.txt  ihf_p.cc  ihf_p.h  ith_p.cc  ith_p.h  pipe.cc  texthook.cc  texthook.h  texthook.pri  texthook.pro  texthook.rc  texthook_config.h  texthook_p.h  texthook_static.pri  textthread.cc  textthread.h  textthread_p.cc  textthread_p.h  winapi_p.cc  winapi_p.h  winmutex.h
vnr/texthook/host/: CMakeLists.txt  avl_p.h  config.h  hookman.cc  hookman.h  host.cc  host.h  host.pri  pipe.cc  (+5 more)
vnr/vnrhook/: CMakeLists.txt  vnrhook.pri  vnrhook.pro
vnr/windbg/: hijack.cc  hijack.h  inject.cc  inject.h  unload.cc  unload.h  util.cc  util.h  windbg.h  windbg.pri  windbg_p.h
vnr/winkey/: winkey.h  winkey.pri
vnr/winmaker/: winmaker.cc  winmaker.h  winmaker.pri
vnr/winmutex/: winmutex  winmutex.h  winmutex.pri
vnr/winseh/: Makefile  safeseh.asm  winseh.cc  winseh.h  winseh_safe.cc  winseh_safe.pri  winseh_unsafe.cc  winseh_unsafe.pri
vnr/wintimer/: wintimer.cc  wintimer.h  wintimer.pri  wintimer.pro  wintimerbase.cc  wintimerbase.h
vnr/winversion/: winversion.cc  winversion.h  winversion.pri
vnrhook/: CMakeLists.txt  main.cc  main.h  pipe.cc  pipe.h  texthook.cc  texthook.h
vnrhook/engine/: engine.cc  engine.h  match.cc  match64.cc  pchooks.cc  pchooks.h
vnrhook/hijack/: texthook.cc  texthook.h
vnrhook/include/: const.h  defs.h  types.h
vnrhook/libminhook/: CMakeLists.txt
vnrhook/src/: main.cc  main.h  pipe.cc
vnrhook/util/: except.h  util.cc  util.h
vnrhook64/: CMakeLists.txt
vnrhook64/src/: main.cc  main.h  pipe.cc
(+134 files in other folders)
